# Audit_Tool_Crew

AuditTool/: .env  .replit  app.py  audit_liability_api.py  excel_processor.py  liability_analyzer.py  main.py  models.py  pyproject.toml  replit.md  report_generator.py  routes.py
AuditTool/attached_assets/: 15. SOP- Samples for Search for Unrecorded Liabilities TW_1756135365269.docx  Pasted--AI-Agent-Prompt-for-Automating-Search-for-Unrecorded-Liabilities-Purpose-You-are-tasked-w-1756135342981_1756135342982.txt
AuditTool/exports/: audit_report_someone_20251003_134539.xlsx  audit_report_test_20251101_184446.xlsx  audit_report_test_20251102_020937.xlsx
AuditTool/instance/: audit_tool.db
AuditTool/outputs/: Audit_Liability_Report_20251104_120239.xlsx  Audit_Liability_Report_20251104_120425.xlsx  Audit_Liability_Report_20251104_161226.xlsx  Audit_Liability_Report_20251104_165819.xlsx  Audit_Liability_Report_20251104_170702.xlsx  Audit_Liability_Report_20251104_174131.xlsx  Audit_Liability_Report_20251104_174425.xlsx  Audit_Liability_Report_20251104_182429.xlsx  Audit_Liability_Report_20251105_095637.xlsx  Audit_Liability_Report_20251105_112732.xlsx  Audit_Liability_Report_20251105_115654.xlsx  Audit_Liability_Report_20251105_123134.xlsx  Audit_Liability_Report_20251105_134408.xlsx  Audit_Liability_Report_20251107_135551.xlsx  (+12 more)
AuditTool/static/js/: main.js
Budget-Preparation-Assistance-MongoDB/: api.py  app.py  db_config.py  pyproject.toml  replit.md  requirements.txt  test_gemini_models.py
Prepaid Expense Analysis with MongoDB/: api.py  app.py  database.py  main.py  models.py  pyproject.toml  replit.md  routes.py
Status_Tracker/: .env  api_wrapper.py  app.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  scraper.py  test_clients.xlsx
(+546 files in other folders)
