[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Audit Liability Tool with MongoDB"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "mongoengine>=0.28.2",
    "pymongo>=4.6.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "werkzeug>=3.1.3",
]