[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Prepaid Expense Analysis with MongoDB"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "mongoengine>=0.28.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymongo>=4.6.1",
    "werkzeug>=3.1.3",
]