[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "RRF Status Tracker with MongoDB"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.33.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.0",
    "mongoengine>=0.28.2",
    "pymongo>=4.6.0",
    "requests>=2.32.0",
]